# pytest-urllib3

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: tests.yml
src/pytest_urllib3/: __init__.py  _mock.py  _options.py  _pretty_print.py  _request.py  _request_matcher.py
tests/: test_plugin.py  test_urllib3_mock.py
