[project]
name = "pytest-urllib3"
version = "0.2.0"
description = "A pytest plugin to mock urllib3 requests"
readme = "README.md"
license = "MPL-2.0"
authors = [
    { name = "Giorgio Vilardo" }
]
keywords = [
    "urllib3",
    "pytest",
    "testing",
    "mock",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "pytest>=7",
    "urllib3>=1.26",
]

[project.urls]
Homepage = "https://github.com/giorgiovilardo/pytest-urllib3"
Issues = "https://github.com/giorgiovilardo/pytest-urllib3/issues"

[project.entry-points.pytest11]
urllib3_mock = "pytest_urllib3"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.11 ; python_full_version >= '3.10'",
    "tox>=4.48.1; python_version >= '3.10'",
    "tox-uv>=1.33.1; python_version >= '3.10'",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "ISC001", "ISC002", "W"]
ignore = ["E501"]

[tool.ruff.lint.flake8-implicit-str-concat]
allow-multiline = false

[tool.ruff.lint.isort]
known-first-party = ["pytest_urllib3"]

[tool.tox]
legacy_tox_ini = """
[tox]
env_list =
    py39-pytest7-urllib3{1,2}
    py{310,311,312,313,314}-pytest{7,8}-urllib3{1,2}

[testenv]
description = Run tests under {base_python} with {env_name}
set_env = TERM = xterm
deps =
    pytest7: pytest>=7,<8
    pytest8: pytest>=8,<9
    urllib31: urllib3>=1.26,<2
    urllib32: urllib3>=2,<3
commands = pytest tests/ -q --no-header --tb=short
"""
